--- a/src/components/stage-wrapper/stage-wrapper.css
+++ b/src/components/stage-wrapper/stage-wrapper.css
@@ -23,7 +23,7 @@
     right: 0;
     bottom: 0;
     z-index: $z-index-stage-wrapper-overlay;
-    background-color: $ui-white;
+    background-color: $fullscreen-background;
     /* spacing between stage and control bar (on the top), or between
     stage and window edges (on left/right/bottom) */
     padding: $stage-full-screen-stage-padding;
